--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,7 @@
 
 This project is a dog social connection service built on Rails and styled with Foundation. The user registration process is powered by Devise and all form interactions are organized with Simple Form. Owners can easily upload their favorite pet’s photos with Carrierwave and then friend or message other pets. 
 
-![Home Page](https://raw.githubusercontent.com/bowiesaurus/barkr/master/public/Screen%20Shot%202014-07-22%20at%2012.29.40%20PM.png)
+![ScreenShot](https://raw.githubusercontent.com/bowiesaurus/barkr/master/public/Screen%20Shot%202014-07-22%20at%2012.29.40%20PM.png "Main Page")
 
-![User Main Page](https://raw.githubusercontent.com/bowiesaurus/barkr/master/public/Screen%20Shot%202014-07-22%20at%2012.30.58%20PM.png)
+![ScreenShot](https://raw.githubusercontent.com/bowiesaurus/barkr/master/public/Screen%20Shot%202014-07-22%20at%2012.30.58%20PM.png "User Index")
+  
